--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- メインコンテンツのコンテナ -->
     <div class="bg-white p-8 rounded-2xl shadow-xl w-full max-w-2xl text-center">
         <!-- タイトル -->
-        <h1 class="text-4xl font-extrabold text-gray-900 mb-6">作成したコンテンツ集</h1>
+        <h1 class="text-4xl font-extrabold text-gray-900 mb-6">ICTポータル</h1>
         <p class="text-lg text-gray-600 mb-10">クリックすると各ページに移動します。</p>
 
         <!-- リンクのリスト -->
