--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               class="block bg-gradient-to-br from-blue-500 to-blue-700 hover:from-blue-600 hover:to-blue-800 text-white rounded-2xl p-6 shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
               <div class="text-center">
                 <div class="text-4xl mb-3">🔢</div>
-                <h3 class="text-lg font-bold mb-2">百マス計算</h3>
+                <h3 class="text-lg font-bold mb-2">百マス計算プリント作成</h3>
                 <p class="text-sm opacity-80 mb-3">一桁の足し算・引き算を素早く計算練習</p>
                 <div class="flex justify-center space-x-2 mb-3">
                   <span class="bg-white/20 px-2 py-1 rounded text-xs">足し算</span>
