--- a/index.html
+++ b/index.html
@@ -22,19 +22,80 @@
     /* カスタムスタイル */
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #1a202c; /* ダークな背景色 */
-      color: #e2e8f0; /* 明るいテキスト色 */
+      background-color: #f0f2f5; /* 明るいライトグレーに変更 */
+      color: #2d3748; /* テキスト色を濃いグレーに変更して視認性向上 */
     }
 
+    /* メインコンテンツエリアのグラスエフェクト */
     .glass-effect {
-      background-color: rgba(255, 255, 255, 0.1); /* 半透明の白色 */
+      background-color: rgba(255, 255, 255, 0.7); /* より不透明な白に調整 */
       backdrop-filter: blur(10px); /* 背景をぼかす */
-      border: 1px solid rgba(255, 255, 255, 0.2); /* わずかな境界線 */
-      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3); /* 影 */
+      border: 1px solid rgba(0, 0, 0, 0.1); /* 薄い境界線 */
+      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.15); /* 影を調整 */
     }
 
     .hover-glow:hover {
       box-shadow: 0 0 15px rgba(74, 222, 128, 0.6), 0 0 30px rgba(74, 222, 128, 0.4); /* ホバー時の緑色の光 */
+    }
+
+    /* モーダルの背景を調整 */
+    #appsModal, #bisquitModal {
+      background-color: rgba(0, 0, 0, 0.5); /* モーダル背景は半透明の暗い色を維持し、コンテンツに集中させる */
+    }
+
+    /* モーダル内のグラスエフェクト */
+    #appsModal .glass-effect,
+    #bisquitModal .glass-effect {
+        background-color: rgba(255, 255, 255, 0.9); /* モーダルコンテンツはほぼ不透明な白に */
+        border: 1px solid rgba(0, 0, 0, 0.15);
+        color: #2d3748; /* モーダル内のテキスト色も濃く */
+    }
+
+    /* モーダル内のタイトルやテキストの色を調整（モーダル内のglass-effect適用箇所） */
+    #appsModal .glass-effect h2,
+    #bisquitModal .glass-effect h2,
+    #bisquitModal .glass-effect h3,
+    #bisquitModal .glass-effect h4,
+    #appsModal .glass-effect p,
+    #bisquitModal .glass-effect p,
+    #bisquitModal .glass-effect ul,
+    #bisquitModal .glass-effect li {
+        color: #2d3748; /* モーダル内のテキスト色を濃いグレーに */
+    }
+    #appsModal .glass-effect .text-white,
+    #bisquitModal .glass-effect .text-white { /* 元々text-whiteが指定されている要素も調整 */
+        color: #2d3748 !important;
+    }
+    #appsModal .glass-effect .border-white\/20 { /* ボーダー色も調整 */
+        border-color: rgba(0, 0, 0, 0.1) !important;
+    }
+    #appsModal .glass-effect button,
+    #bisquitModal .glass-effect button {
+        color: #4a5568 !important; /* 閉じるボタンの色 */
+    }
+    #appsModal .glass-effect button:hover,
+    #bisquitModal .glass-effect button:hover {
+        color: #e53e3e !important; /* 閉じるボタンのホバー色 */
+    }
+
+    /* モーダル内のカード色を調整 */
+    #appsModal .glass-effect a.block,
+    #appsModal .glass-effect div.block {
+      background-color: #edf2f7; /* モーダル内のカード背景をライトグレーに */
+      color: #2d3748; /* カード内のテキスト色 */
+      border: 1px solid rgba(0, 0, 0, 0.05);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    }
+    #appsModal .glass-effect a.block:hover,
+    #appsModal .glass-effect div.block:hover {
+      background-color: #e2e8f0; /* ホバー時を少し濃く */
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    /* モーダル内のNEWタグの色を調整 */
+    #appsModal .glass-effect .absolute.top-2.right-2 {
+      background-color: #e53e3e; /* 赤を維持 */
+      color: white;
     }
   </style>
 
@@ -48,8 +109,8 @@
   <!-- メインコンテンツのコンテナ -->
   <div class="glass-effect p-8 rounded-3xl w-full max-w-4xl text-center">
     <!-- タイトル -->
-    <h1 class="text-5xl font-extrabold text-white mb-4 drop-shadow-lg">✨ ICTコンテンツハブ</h1>
-    <p class="text-xl text-white/90 mb-12 drop-shadow">革新的な教育体験をお届けします - クリックして探索してください</p>
+    <h1 class="text-5xl font-extrabold text-gray-800 mb-4 drop-shadow-lg">✨ ICTコンテンツハブ</h1>
+    <p class="text-xl text-gray-700 mb-12 drop-shadow">革新的な教育体験をお届けします - クリックして探索してください</p>
 
     <!-- リンクのグリッド -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -108,7 +169,7 @@
     </div>
 
     <div class="mt-12 text-center">
-      <p class="text-white/70 text-sm">© 2025 ICTコンテンツハブ. All rights reserved.</p>
+      <p class="text-gray-600 text-sm">© 2025 ICTコンテンツハブ. All rights reserved.</p>
     </div>
   </div>
 
@@ -117,29 +178,29 @@
     <div class="flex items-center justify-center min-h-screen p-4">
       <div class="glass-effect rounded-3xl max-w-4xl w-full max-h-[80vh] overflow-y-auto">
         <div class="flex justify-between items-center p-6 border-b border-white/20">
-          <h2 class="text-3xl font-bold text-white">📱 学習アプリ</h2>
-          <button onclick="closeAppsFolder()" class="text-white hover:text-red-300 text-3xl">&times;</button>
+          <h2 class="text-3xl font-bold text-gray-800">📱 学習アプリ</h2>
+          <button onclick="closeAppsFolder()" class="text-gray-600 hover:text-red-500 text-3xl">&times;</button>
         </div>
         <div class="p-6">
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
             <!-- 百マス計算アプリ -->
             <a href="https://medu-web.github.io/100-grid-calculation-single-digit-addition-and-subtraction/"
               target="_blank"
-              class="block bg-gradient-to-br from-blue-500 to-blue-700 hover:from-blue-600 hover:to-blue-800 text-white rounded-2xl p-6 shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+              class="block bg-gradient-to-br from-blue-100 to-blue-200 hover:from-blue-200 hover:to-blue-300 text-gray-800 rounded-2xl p-6 shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
               <div class="text-center">
                 <div class="text-4xl mb-3">🔢</div>
-                <h3 class="text-lg font-bold mb-2">百マス計算プリント作成</h3>
+                <h3 class="text-lg font-bold mb-2">百マス計算</h3>
                 <p class="text-sm opacity-80 mb-3">一桁の足し算・引き算を素早く計算練習</p>
                 <div class="flex justify-center space-x-2 mb-3">
-                  <span class="bg-white/20 px-2 py-1 rounded text-xs">足し算</span>
-                  <span class="bg-white/20 px-2 py-1 rounded text-xs">引き算</span>
+                  <span class="bg-gray-200 px-2 py-1 rounded text-xs">足し算</span>
+                  <span class="bg-gray-200 px-2 py-1 rounded text-xs">引き算</span>
                 </div>
                 <div class="text-xs opacity-70">難易度: ⭐⭐⭐</div>
               </div>
             </a>
 
             <!-- 将来追加予定のアプリスロット -->
-            <div class="bg-gradient-to-br from-gray-400 to-gray-600 text-white rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">九九練習</h3>
@@ -148,7 +209,7 @@
               </div>
             </div>
 
-            <div class="bg-gradient-to-br from-gray-400 to-gray-600 text-white rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">漢字練習</h3>
@@ -157,7 +218,7 @@
               </div>
             </div>
 
-            <div class="bg-gradient-to-br from-gray-400 to-gray-600 text-white rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">英単語学習</h3>
@@ -166,7 +227,7 @@
               </div>
             </div>
 
-            <div class="bg-gradient-to-br from-gray-400 to-gray-600 text-white rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">時計の読み方</h3>
@@ -175,7 +236,7 @@
               </div>
             </div>
 
-            <div class="bg-gradient-to-br from-gray-400 to-gray-600 text-white rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">分数計算</h3>
@@ -186,7 +247,7 @@
           </div>
 
           <div class="mt-8 text-center">
-            <p class="text-white/70 text-sm">🔄 新しいアプリを随時追加予定です</p>
+            <p class="text-gray-600 text-sm">🔄 新しいアプリを随時追加予定です</p>
           </div>
         </div>
       </div>
@@ -198,21 +259,21 @@
     <div class="flex items-center justify-center min-h-screen p-4">
       <div class="glass-effect rounded-3xl max-w-6xl w-full max-h-[90vh] overflow-y-auto">
         <div class="flex justify-between items-center p-6 border-b border-white/20">
-          <h2 class="text-2xl font-bold text-white">ビスケット授業計画ガイド</h2>
-          <button onclick="closeBisquitModal()" class="text-white hover:text-red-300 text-3xl">&times;</button>
+          <h2 class="text-2xl font-bold text-gray-800">ビスケット授業計画ガイド</h2>
+          <button onclick="closeBisquitModal()" class="text-gray-600 hover:text-red-500 text-3xl">&times;</button>
         </div>
-        <div id="bisquitContent" class="p-6 text-white">
+        <div id="bisquitContent" class="p-6 text-gray-800">
           <div class="text-center mb-8">
-            <h3 class="text-3xl font-bold text-pink-300 mb-4">🎨 プログラミングの魔法を体験！</h3>
+            <h3 class="text-3xl font-bold text-pink-600 mb-4">🎨 プログラミングの魔法を体験！</h3>
             <p class="text-lg">小学2年生がビスケットを使ってプログラミングの基礎から創造的な表現まで、段階的に楽しく学べる授業計画です。</p>
           </div>
 
           <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-8">
-            <div class="bg-red-500/20 rounded-xl p-6 border border-red-300/30">
-              <h4 class="text-xl font-bold text-red-300 mb-3">ステップ1：10分授業</h4>
+            <div class="bg-red-500/10 rounded-xl p-6 border border-red-300/30">
+              <h4 class="text-xl font-bold text-red-600 mb-3">ステップ1：10分授業</h4>
               <div class="text-4xl mb-3">🎯</div>
               <p class="mb-3"><strong>「動いた！」体験</strong></p>
-              <ul class="text-sm space-y-1">
+              <ul class="text-sm space-y-1 text-gray-700">
                 <li>• 絵を描く（3分）</li>
                 <li>• ルールを作る（4分）</li>
                 <li>• 動かして感動（2分）</li>
@@ -220,11 +281,11 @@
               </ul>
             </div>
 
-            <div class="bg-yellow-500/20 rounded-xl p-6 border border-yellow-300/30">
-              <h4 class="text-xl font-bold text-yellow-300 mb-3">ステップ2：20分授業</h4>
+            <div class="bg-yellow-500/10 rounded-xl p-6 border border-yellow-300/30">
+              <h4 class="text-xl font-bold text-yellow-600 mb-3">ステップ2：20分授業</h4>
               <div class="text-4xl mb-3">🧠</div>
               <p class="mb-3"><strong>「もし〜なら」の論理</strong></p>
-              <ul class="text-sm space-y-1">
+              <ul class="text-sm space-y-1 text-gray-700">
                 <li>• 条件分岐の概念</li>
                 <li>• キャラクター同士の相互作用</li>
                 <li>• 論理的思考の第一歩</li>
@@ -232,11 +293,11 @@
               </ul>
             </div>
 
-            <div class="bg-green-500/20 rounded-xl p-6 border border-green-300/30">
-              <h4 class="text-xl font-bold text-green-300 mb-3">ステップ3：45分授業</h4>
+            <div class="bg-green-500/10 rounded-xl p-6 border border-green-300/30">
+              <h4 class="text-xl font-bold text-green-600 mb-3">ステップ3：45分授業</h4>
               <div class="text-4xl mb-3">💡</div>
               <p class="mb-3"><strong>創造的表現と発展</strong></p>
-              <ul class="text-sm space-y-1">
+              <ul class="text-sm space-y-1 text-gray-700">
                 <li>• 自由な発想で作品制作</li>
                 <li>• 発表とフィードバック</li>
                 <li>• 友達の作品から学ぶ</li>
@@ -246,14 +307,14 @@
           </div>
 
           <div class="mt-8 text-center">
-            <h4 class="text-2xl font-bold text-blue-300 mb-4">🌟 ビスケットで育む力</h4>
-            <ul class="list-disc list-inside text-lg space-y-2 max-w-2xl mx-auto">
+            <h4 class="text-2xl font-bold text-blue-600 mb-4">🌟 ビスケットで育む力</h4>
+            <ul class="list-disc list-inside text-lg space-y-2 max-w-2xl mx-auto text-gray-700">
               <li>創造力：自分でアイデアを形にする楽しさ</li>
               <li>論理的思考力：どうすれば動くか考える力</li>
               <li>問題解決能力：エラーを自分で見つけて直す力</li>
               <li>表現力：自分の考えをプログラミングで伝える力</li>
             </ul>
-            <p class="mt-6 text-base text-white/80">この授業計画を通じて、子供たちはプログラミングを身近なものとして捉え、未来のデジタル社会で活躍するための基礎を築きます。</p>
+            <p class="mt-6 text-base text-gray-700">この授業計画を通じて、子供たちはプログラミングを身近なものとして捉え、未来のデジタル社会で活躍するための基礎を築きます。</p>
           </div>
         </div>
       </div>
