--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
       background-color: #e53e3e; /* 赤を維持 */
       color: white;
     }
+
+    /* カテゴリタグのスタイル */
+    .category-tag {
+      position: absolute;
+      top: 0.75rem; /* 左上からの距離を調整 */
+      left: 0.75rem; /* 左上からの距離を調整 */
+      padding: 0.25rem 0.75rem;
+      border-radius: 9999px; /* 角を丸く */
+      font-size: 0.75rem; /* 文字サイズ */
+      font-weight: bold;
+      color: white;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
   </style>
 
   <title>ICTコンテンツハブ</title>
@@ -117,6 +130,7 @@
       <!-- アプリフォルダ -->
       <div onclick="openAppsFolder()"
         class="block bg-gradient-to-r from-blue-500 to-cyan-600 hover:from-blue-600 hover:to-cyan-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow cursor-pointer relative overflow-hidden">
+        <span class="category-tag bg-blue-700">教育アプリ</span>
         <div class="absolute top-2 right-2 bg-red-500 text-xs px-2 py-1 rounded-full">NEW</div>
         <div class="text-3xl mb-2">📱</div>
         <div class="text-lg">アプリ</div>
@@ -129,7 +143,8 @@
 
       <!-- ICTインフォグラフィック -->
       <a href="https://medu-web.github.io/my-ict-infographic/" target="_blank"
-        class="block bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow">
+        class="block bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow relative overflow-hidden">
+        <span class="category-tag bg-purple-700">教育改革</span>
         <div class="text-2xl mb-2">🚀</div>
         <div class="text-lg">教育ICT環境改革</div>
         <div class="text-sm opacity-80">未来の教育提案</div>
@@ -137,7 +152,9 @@
 
       <!-- ローマ字表記の課題 -->
       <a href="https://medu-web.github.io/Issues-with-Romanized-spelling/" target="_blank"
-        class="block bg-gradient-to-r from-green-500 to-green-600 hover:from-green-600 hover:to-green-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow">
+        class="block bg-gradient-to-r from-green-500 to-green-600 hover:from-green-600 hover:to-green-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow relative overflow-hidden">
+        <span class="category-tag bg-green-700">問題提起</span>
+        <span class="category-tag bg-green-800" style="left: 0.75rem; top: 2.75rem;">言語教育</span>
         <div class="text-2xl mb-2">🔤</div>
         <div class="text-lg">ローマ字表記の課題</div>
         <div class="text-sm opacity-80">言語教育の改善</div>
@@ -145,7 +162,8 @@
 
       <!-- micro:bit購入プラン -->
       <a href="https://medu-web.github.io/microbit/microbit.html" target="_blank"
-        class="block bg-gradient-to-r from-yellow-500 to-yellow-600 hover:from-yellow-600 hover:to-yellow-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow">
+        class="block bg-gradient-to-r from-yellow-500 to-yellow-600 hover:from-yellow-600 hover:to-yellow-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow relative overflow-hidden">
+        <span class="category-tag bg-yellow-700">プログラミング</span>
         <div class="text-2xl mb-2">🤖</div>
         <div class="text-lg">micro:bit購入プラン</div>
         <div class="text-sm opacity-80">プログラミング教育</div>
@@ -153,7 +171,8 @@
 
       <!-- AI教育コンテンツハブ -->
       <a href="https://medu-web.github.io/AI-Educational-Content-Hub/" target="_blank"
-        class="block bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow">
+        class="block bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow relative overflow-hidden">
+        <span class="category-tag bg-red-700">AI教育</span>
         <div class="text-2xl mb-2">🧠</div>
         <div class="text-lg">AI教育コンテンツハブ</div>
         <div class="text-sm opacity-80">人工知能との学び</div>
@@ -161,7 +180,8 @@
 
       <!-- ビスケット授業計画 -->
       <div onclick="openBisquitModal()"
-        class="block bg-gradient-to-r from-pink-500 to-rose-600 hover:from-pink-600 hover:to-rose-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow cursor-pointer">
+        class="block bg-gradient-to-r from-pink-500 to-rose-600 hover:from-pink-600 hover:to-rose-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow cursor-pointer relative overflow-hidden">
+        <span class="category-tag bg-pink-700">授業計画</span>
         <div class="text-2xl mb-2">📝</div>
         <div class="text-lg">ビスケット授業計画</div>
         <div class="text-sm opacity-80">プログラミング入門</div>
@@ -186,7 +206,8 @@
             <!-- 百マス計算アプリ -->
             <a href="https://medu-web.github.io/100-grid-calculation-single-digit-addition-and-subtraction/"
               target="_blank"
-              class="block bg-gradient-to-br from-blue-100 to-blue-200 hover:from-blue-200 hover:to-blue-300 text-gray-800 rounded-2xl p-6 shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+              class="block bg-gradient-to-br from-blue-100 to-blue-200 hover:from-blue-200 hover:to-blue-300 text-gray-800 rounded-2xl p-6 shadow-xl hover:shadow-2xl transition-all duration-300 transform hover:scale-105 relative overflow-hidden">
+              <span class="category-tag bg-blue-600" style="top: 0.5rem; left: 0.5rem; padding: 0.15rem 0.5rem; font-size: 0.65rem;">算数</span>
               <div class="text-center">
                 <div class="text-4xl mb-3">🔢</div>
                 <h3 class="text-lg font-bold mb-2">百マス計算</h3>
@@ -200,7 +221,8 @@
             </a>
 
             <!-- 将来追加予定のアプリスロット -->
-            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60 relative overflow-hidden">
+              <span class="category-tag bg-purple-600" style="top: 0.5rem; left: 0.5rem; padding: 0.15rem 0.5rem; font-size: 0.65rem;">算数</span>
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">九九練習</h3>
@@ -209,7 +231,8 @@
               </div>
             </div>
 
-            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60 relative overflow-hidden">
+              <span class="category-tag bg-green-600" style="top: 0.5rem; left: 0.5rem; padding: 0.15rem 0.5rem; font-size: 0.65rem;">国語</span>
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">漢字練習</h3>
@@ -218,7 +241,8 @@
               </div>
             </div>
 
-            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60 relative overflow-hidden">
+              <span class="category-tag bg-red-600" style="top: 0.5rem; left: 0.5rem; padding: 0.15rem 0.5rem; font-size: 0.65rem;">英語</span>
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">英単語学習</h3>
@@ -227,7 +251,8 @@
               </div>
             </div>
 
-            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60 relative overflow-hidden">
+              <span class="category-tag bg-yellow-600" style="top: 0.5rem; left: 0.5rem; padding: 0.15rem 0.5rem; font-size: 0.65rem;">生活</span>
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">時計の読み方</h3>
@@ -236,7 +261,8 @@
               </div>
             </div>
 
-            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60">
+            <div class="bg-gradient-to-br from-gray-100 to-gray-200 text-gray-700 rounded-2xl p-6 shadow-xl opacity-60 relative overflow-hidden">
+              <span class="category-tag bg-indigo-600" style="top: 0.5rem; left: 0.5rem; padding: 0.15rem 0.5rem; font-size: 0.65rem;">算数</span>
               <div class="text-center">
                 <div class="text-4xl mb-3">🚧</div>
                 <h3 class="text-lg font-bold mb-2">分数計算</h3>
