--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     }
   </style>
 
-  <title>ICTコンテンツハブ</title>
+  <title>ICTコンテンツポータル</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
