--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     }
   </style>
 
-  <title>ICTコンテンツポータル</title>
+  <title>ICTコンテンツハブ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -146,6 +146,16 @@
           <div class="w-6 h-6 bg-white/20 rounded-full flex items-center justify-center text-xs">+</div>
         </div>
       </div>
+
+      <!-- StudXStyle by MEXT -->
+      <a href="https://www.mext.go.jp/studxstyle/" target="_blank"
+        class="block bg-gradient-to-r from-orange-500 to-amber-600 hover:from-orange-600 hover:to-amber-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow relative overflow-hidden"
+        data-categories="GIGAスクール構想,教育改革">
+        <span class="category-tag bg-orange-700" onclick="event.stopPropagation(); filterContent('GIGAスクール構想')">GIGAスクール構想</span>
+        <div class="text-2xl mb-2">🏫</div>
+        <div class="lg">スタディーエックス　スタイル<br>StuDX Style</div>
+        <div class="text-sm opacity-80">文科省の情報発信サイト</div>
+      </a>
 
       <!-- ICTインフォグラフィック -->
       <a href="https://medu-web.github.io/my-ict-infographic/" target="_blank"
