--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
       <!-- ICTインフォグラフィック -->
       <a href="https://medu-web.github.io/my-ict-infographic/" target="_blank"
         class="block bg-gradient-to-r from-purple-500 to-purple-600 hover:from-purple-600 hover:to-purple-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow relative overflow-hidden"
-        data-categories="教育改革">
+        data-categories="教育改革,提言">
         <span class="category-tag bg-purple-700" onclick="event.stopPropagation(); filterContent('教育改革')">教育改革</span>
+        <span class="category-tag bg-purple-800" style="left: 0.75rem; top: 2.75rem;" onclick="event.stopPropagation(); filterContent('提言')">提言</span>
         <div class="text-2xl mb-2">🚀</div>
         <div class="text-lg">教育ICT環境改革</div>
         <div class="text-sm opacity-80">未来の教育提案</div>
@@ -170,8 +171,8 @@
       <!-- ローマ字表記の課題 -->
       <a href="https://medu-web.github.io/Issues-with-Romanized-spelling/" target="_blank"
         class="block bg-gradient-to-r from-green-500 to-green-600 hover:from-green-600 hover:to-green-700 text-white font-bold py-6 px-8 rounded-2xl shadow-xl hover-glow relative overflow-hidden"
-        data-categories="問題提起,言語教育">
-        <span class="category-tag bg-green-700" onclick="event.stopPropagation(); filterContent('問題提起')">問題提起</span>
+        data-categories="提言,言語教育">
+        <span class="category-tag bg-green-700" onclick="event.stopPropagation(); filterContent('提言')">提言</span>
         <span class="category-tag bg-green-800" style="left: 0.75rem; top: 2.75rem;" onclick="event.stopPropagation(); filterContent('言語教育')">言語教育</span>
         <div class="text-2xl mb-2">🔤</div>
         <div class="text-lg">ローマ字表記の課題</div>
