--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       z-index: 10;
     }
 
-    /* 新しい詳細ボタンのスタイル */
-    .details-button {
+    /* 新しいアクションボタンのスタイル */
+    .action-button {
       background-color: #4a5568; /* ボタンの色をダークグレーに */
       color: white;
       padding: 0.5rem 1rem;
@@ -125,7 +125,7 @@
       transition: background-color 0.2s, transform 0.2s;
     }
 
-    .details-button:hover {
+    .action-button:hover {
       background-color: #2d3748; /* ホバーでさらに濃く */
       transform: translateY(-2px); /* 少し上に移動 */
     }
@@ -162,7 +162,7 @@
           <div class="w-6 h-6 bg-white/20 rounded-full flex items-center justify-center text-xs">🔢</div>
           <div class="w-6 h-6 bg-white/20 rounded-full flex items-center justify-center text-xs">+</div>
         </div>
-        <button onclick="openAppsFolder()" class="details-button">詳細</button>
+        <button onclick="openAppsFolder()" class="action-button">アプリを見る</button>
       </div>
 
       <!-- StudXStyle by MEXT -->
@@ -173,7 +173,7 @@
         <div class="text-2xl mb-2">🏫</div>
         <div class="lg">スタディーエックス　スタイル<br>StuDX Style</div>
         <div class="text-sm opacity-80">文科省の情報発信サイト</div>
-        <a href="https://www.mext.go.jp/studxstyle/" target="_blank" class="details-button inline-block">詳細</a>
+        <a href="https://www.mext.go.jp/studxstyle/" target="_blank" class="action-button inline-block">サイトへ</a>
       </div>
 
       <!-- ICTインフォグラフィック -->
@@ -185,7 +185,7 @@
         <div class="text-2xl mb-2">🚀</div>
         <div class="text-lg">教育ICT環境改革</div>
         <div class="text-sm opacity-80">未来の教育提案</div>
-        <a href="https://medu-web.github.io/my-ict-infographic/" target="_blank" class="details-button inline-block">詳細</a>
+        <a href="https://medu-web.github.io/my-ict-infographic/" target="_blank" class="action-button inline-block">サイトへ</a>
       </div>
 
       <!-- ローマ字表記の課題 -->
@@ -197,7 +197,7 @@
         <div class="text-2xl mb-2">🔤</div>
         <div class="text-lg">ローマ字表記の課題</div>
         <div class="text-sm opacity-80">言語教育の改善</div>
-        <a href="https://medu-web.github.io/Issues-with-Romanized-spelling/" target="_blank" class="details-button inline-block">詳細</a>
+        <a href="https://medu-web.github.io/Issues-with-Romanized-spelling/" target="_blank" class="action-button inline-block">サイトへ</a>
       </div>
 
       <!-- micro:bit購入プラン -->
@@ -208,7 +208,7 @@
         <div class="text-2xl mb-2">🤖</div>
         <div class="text-lg">micro:bit購入プラン</div>
         <div class="text-sm opacity-80">プログラミング教育</div>
-        <a href="https://medu-web.github.io/microbit/microbit.html" target="_blank" class="details-button inline-block">詳細</a>
+        <a href="https://medu-web.github.io/microbit/microbit.html" target="_blank" class="action-button inline-block">サイトへ</a>
       </div>
 
       <!-- AI教育コンテンツハブ -->
@@ -219,7 +219,7 @@
         <div class="text-2xl mb-2">🧠</div>
         <div class="text-lg">AI教育コンテンツハブ</div>
         <div class="text-sm opacity-80">人工知能との学び</div>
-        <a href="https://medu-web.github.io/AI-Educational-Content-Hub/" target="_blank" class="details-button inline-block">詳細</a>
+        <a href="https://medu-web.github.io/AI-Educational-Content-Hub/" target="_blank" class="action-button inline-block">サイトへ</a>
       </div>
 
       <!-- ビスケット授業計画 -->
@@ -230,7 +230,7 @@
         <div class="text-2xl mb-2">📝</div>
         <div class="text-lg">ビスケット授業計画</div>
         <div class="text-sm opacity-80">プログラミング入門</div>
-        <button onclick="openBisquitModal()" class="details-button">詳細</button>
+        <button onclick="openBisquitModal()" class="action-button">授業計画を見る</button>
       </div>
     </div>
 
